-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0-rc1
-
None
-
453d191d0f351d4588fa5840fe94684c93088f25
Qt 4 qmake doesn't link in the mingw runtimes statically. Therefore trying to run qmake -query on every Qt Creator startup results in one or multiple message boxes
---------------------------
qmake.exe - System Error
---------------------------
The program can't start because libwinpthread-1.dll is missing from your computer. Try reinstalling the program to fix this problem.
---------------------------
OK
---------------------------
(that is, if the mingw runtime dll's aren't in the default path of Qt Creator. This got worse now that we're actually trying to run qmake with the environments of all compatible toolchains until it succeeds ...
- replaces
-
QTCREATORBUG-10422 Error message about missing MinGW DLL when starting Creator
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-11962 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82714,7 | Prevent 'qmake -query' from bringing up modal message dialog on startup | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |