Prevent 'qmake -query' from bringing up modal message dialog on startup

Temporarily set the ErrorMode so that no Windows error message box will
show up in case qmake fails to run (e.g. because of missing .dll's).
The error mode will automatically be inherited by child processes.

This fixes an issue that actually became virulent by another bug fix
( cbb053068ccc6399dc7a39 ).

Task-number: QTCREATORBUG-11962
Change-Id: I5baccf52baee46f3d45b69ea0a13d77e4e113fbd
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>